--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:5000",
+  "proxy": "https://pococare-backend-jo8v.onrender.com",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
